--- a/iframes/AWS_TA_01-01.html
+++ b/iframes/AWS_TA_01-01.html
@@ -454,9 +454,9 @@ line-height:18px;
     </g>
   </g>
 </svg>
-		<div id="Stat01" class="g-ai2html-settings g-aiAbs" style="top:42.6378%;left:10.3522%;width:26.875%;">
+		<div id="Stat01" class="g-ai2html-settings g-aiAbs" style="top:22.6378%;left:1.3522%;width:26.875%;">
 			<p class="g-pstyle0"><span class="g-cstyle0">$</span>6.30</p>
-			<p>Advanced digital skills hello</p>
+			<p>Advanced digital skills</p>
 		</div>
 		<div id="Stat03" class="g-ai2html-settings g-aiAbs" style="top:22.6378%;left:52.4393%;margin-left:-16.6875%;width:33.375%;">
 			<p class="g-pstyle1"><span class="g-cstyle0">$</span>6.70</p>
