--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
     <article class="container">
         <div class="wrap">
             <div class="grid">
-                <div class="sidebar">
-                    
                 </div>
-                <div class="content">
+                <div class="content full-width">
                     <p>
                         Digital skills are now crucial to almost every role across almost every organisation. Employees are expected to understand basic business technology and often have a few intermediate and advanced skills up their sleeves too. A tech-savvy workforce is vital to revenue growth, increased innovation, and job security and satisfaction.
                     </p>
