--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                     </span> &gt; <span>
                         <a href="https://technologyadvice.com/blog/">Blog</a>
                     </span> &gt; <span class="breadcrumb_last" aria-current="page">
-                        Developing digital skills: a cornerstone of modern business
+                        Developing Digital Skills: A Cornerstone of Modern Business
                     </span>
                 </span>
             </div>
             <h1 class="mb-1">
-                Developing digital skills: a cornerstone of modern business
+                <span class="subhead">Developing Digital Skills:</span>A Cornerstone of Modern Business
             </h1>
             <p class="lead">
                 Investing in digital skills is a business imperative, but why are many organisations still struggling to get this right?
@@ -54,7 +54,16 @@
     <article class="container">
         <div class="wrap">
             <div class="grid">
+                <div class="sidebar">
+                    <div class="sponsored">
+					<h4>Sponsored By:</h4>
+					<img src="img/StudioA-DarkBackground.png"></img>
+				</div>
                 </div>
+				<div class="column">
+				<div id="infographicheader_hype_container" class="HYPE_document infographicheader" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;margin-bottom: 20px">
+					<script type="text/javascript" charset="utf-8" src="js/infographicheader_hype_generated_script.js"></script>
+				</div>
                 <div class="content full-width">
                     <p>
                         Digital skills are now crucial to almost every role across almost every organisation. Employees are expected to understand basic business technology and often have a few intermediate and advanced skills up their sleeves too. A tech-savvy workforce is vital to revenue growth, increased innovation, and job security and satisfaction.
@@ -99,6 +108,7 @@
                 <div class="ai2html full-width">
                     <iframe class="refresh" src="iframes/AWS_TA_06.html" width="100%" frameborder="0" scrolling="no" allowtransparency="true" style="border: 0px; background-color: transparent; overflow: hidden;"></iframe>
                 </div>
+				</div>
             </div>
         </div>
     </article>
